--- a/views/shows.erb
+++ b/views/shows.erb
@@ -2,9 +2,10 @@
 <html lang="en-US">
 <head>
   <meta charset="UTF-8">
-  <title>Studio Stats</title>
+  <title><%= @title %> Stats</title>
 </head>
 <body>
+  <h2><%= @title %></h2>
   Total Weekly Classes is <%= @classes.count %><br />
   Instructor Count is <%= @instructors.uniq.count %><br />
   <% if (@total_booked_spots != 0 ) && (@total_open_spots != 0) %>
